<resources>
    <string name="app_name">Expert</string>
    <string name="fcm_channel_id">Nibou</string>
    <!--Expert Login Language-->
    <string name="choose_language">Choose your\nlanguage</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="turkish">Turkish</string>
    <string name="doller">$</string>
    <string name="aed">AED</string>
    <string name="tl">TL</string>
    <string name="minutes">Mins</string>
    <string name="minutes_full">Minutes</string>
    <string name="paid">Paid</string>
    <string name="unpaid">Unpaid</string>
    <string name="cancelled">Cancelled</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="room">Room:</string>
    <string name="txn_id">Transaction Id:</string>
    <string name="customer">Customer Name:</string>
    <string name="earned">Earned:</string>
    <!-- Strings related to login -->
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full Name</string>
    <string name="country">Country</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <!--reset expert password-->
    <string name="enter_email">Enter your email below to receive your password reset instructions</string>
    <string name="reset_pwd">Reset my password</string>
    <string name="success">SUCCESS</string>
    <string name="reset_link">If you have entered a valid email, you will receive an email with reset instructions.</string>
    <!-- nibou chat-->
    <string name="nibou_chat">Nibou chat</string>
    <string name="message">Message</string>
    <string name="OK">OK</string>
    <string name="CANCEL">CANCEL</string>
    <string name="sign_up_success_message">You have successfully signed us with Nibou. You are one step closer to a happier life.</string>
    <string name="image">Image</string>
    <string name="yesterday">Yesterday</string>
    <string name="session_ended_alert">Your session has ended.</string>
    <!--  menu -->
    <string name="profile">Update profile</string>
    <string name="bio">Short bio</string>
    <string name="change_pwd">Change password</string>
    <string name="manage_timing">Manage timings</string>
    <string name="expertise">Expertise</string>
    <string name="language">Languages</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="reviews">Reviews</string>
    <string name="join_txt">Joined on</string>
    <string name="view_rating">View earnings history</string>
    <string name="view_review">View reviews and ratings</string>
    <!--profile string-->
    <string name="profile_txt">Profile</string>
    <string name="view_profile">View Current PDF Profile</string>
    <string name="upload_profile">Upload New PDF Profile</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <!--short bio-->
    <string name="write_about">Write a few sentences about yourself for your Nibou profile image.You can change this later.</string>
    <string name="please_write">Please write here...</string>
    <string name="specialization">Specialization</string>
    <!--timings-->
    <string name="timings">Timings</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <!--specialization-->
    <string name="add">Add another</string>
    <string name="total">total</string>
    <string name="this_month">this month</string>
    <!--feedback-->
    <string name="subject">Subject</string>
    <string name="add_review">Submit Feedback</string>
    <string name="earning">Earnings</string>
    <string name="write_here">write here</string>
    <string name="highlight">Highlight</string>
    <string name="highlight_txt">Highlight important points from this chat.</string>
    <string name="logout">logout</string>
    <string name="logout_txt">Are you sure, you want to logout?</string>
    <!--Change password screen-->
    <string name="reset_password">Reset Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_new">Repeat New</string>
    <string name="depression">Depression</string>
    <string name="currentpwd_empty_alert">Please enter current password.</string>
    <string name="newpwd_empty_alert">Please enter new password.</string>
    <string name="repeatpwd_empty_alert">Please enter repeated password.</string>
    <string name="pwd_length_alert">Password must be greater then 6 digits.</string>
    <string name="pwd_mismatch_alert">Repeated password does not matched.</string>
    <string name="pwd_change_success_alert">Password has been changed successfully.</string>
    <string name="pwd_change_failed_alert">Current password is entered wrong.</string>
    <string name="name_empty_alert">Please enter full name.</string>
    <string name="alias_empty_alert">Please enter alias name.</string>
    <string name="email_empty_alert">Please enter email address.</string>
    <string name="email_invalid_alert">Invalid Email.</string>
    <string name="password_empty_alert">Please enter password.</string>
    <string name="country_empty_alert">Please enter country name.</string>
    <string name="city_empty_alert">Please enter city name.</string>
    <string name="bio_empty_alert">Please enter short bio.</string>
    <string name="bio_success_alert">Short Bio has been updated successfully!</string>
    <string name="pdf_profile_delete_alert">Pdf profile has been deleted successfully.</string>
    <string name="pdf_attached_alert">Pdf is not selected.</string>
    <string name="profile_success_alert">Your profile has been updated successfully</string>
    <!--general alert-->
    <string name="please_select">Please Select</string>
    <string name="please_fill_previous">Please fill previous one first!</string>
    <string name="please_select_timing">Please select correct timimg.</string>
    <string name="timing_delete_alert">Are you sure you want to remove %1$s from your schedule</string>
    <string name="timing_success_alert">Timing has been updated successfully!</string>
    <string name="timing_delete_success_alert">Timing has been removed successfully!</string>
    <string name="authorization_failed">Authorization Failed!</string>
    <string name="timeout">Timeout, Please try again!</string>
    <string name="server_faliure">Server no responding!</string>
    <string name="wrong_with_backend">Something went wrong. Please try again!</string>
    <string name="refresh_token_error_alert">Something went wrong. Please login again!</string>
    <string name="internet_error">Internet connection lost!</string>
    <string name="error">ERROR</string>
    <string name="alert">ALERT</string>
    <string name="error_message">Incorrect username or password</string>
    <string name="already_registered_message">Emaild Id is already registered with another account.</string>
    <string name="forgot_password_error_alert">This account has not yet been created.</string>
    <string name="delete_message_alert">Do you want to delete this pdf?</string>
    <string name="press_back_message">Press back again to Exit.</string>
    <string name="bookmarked_success_alert">Bookmark added successfully!</string>
    <string name="bookmarked_selection_alert">Please highlight first.</string>
    <string name="langauges_success_alert">Languages saved successfully!</string>
    <string name="langauges_delete_alert">Languages deleted successfully!</string>
    <string name="experties_success_alert">Expertise saved successfully!</string>
    <string name="experties_delete_alert">Expertise deleted successfully!</string>
    <string name="feedback_success_alert">Feedback send successfully!</string>
    <string name="feedback_empty_alert">Please enter feedback message.</string>
    <string name="subject_empty_alert">Please enter subject.</string>
    <!--notification alert-->
    <string name="notifications">Notifications</string>
    <string name="group">Group</string>
    <string name="delay_response">Delayed Response</string>
    <string name="delay_alert_message">A Nibou Customer has\'t been responded to in the last %1$s minutes.</string>
</resources>