<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
            android:layout_width="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_height="match_parent"
            android:background="@color/dashboard_back"
            tools:context=".fragments.SettingFragment">

        <include
                android:id="@+id/toolbar"
                layout="@layout/my_toolbar"/>


        <TextView
                android:id="@+id/short_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dim_20"
                android:layout_marginRight="@dimen/dim_20"
                android:layout_marginTop="@dimen/dim_10"
                android:textSize="@dimen/txt_24"
                android:textColor="@color/screen_title_color"
                android:fontFamily="@font/ubuntu_b"
                android:text="@string/bio"
                android:layout_below="@+id/toolbar"
                android:layout_alignParentLeft="true"/>


        <TextView
                android:id="@+id/header_txt"
                android:textColor="@color/screen_title_color"
                android:fontFamily="@font/opensans_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dim_20"
                android:text="@string/write_about"
                android:textSize="@dimen/txt_14"
                android:layout_below="@+id/short_bio"/>

        <ScrollView android:layout_width="match_parent"
                    android:layout_below="@+id/header_txt"
                    android:layout_above="@+id/save"
                    android:fillViewport="true"
                    android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/dashboard_back"
                    tools:context=".fragments.SettingFragment">


                <EditText
                        android:id="@+id/bio_txt"
                        android:padding="@dimen/dim_10"
                        android:textColor="@color/screen_title_color"
                        android:layout_marginLeft="@dimen/dim_20"
                        android:layout_marginRight="@dimen/dim_20"
                        android:layout_width="match_parent"
                        android:minLines="8"
                        android:textColorHint="@color/hint_color"
                        android:fontFamily="@font/ubuntu_m"
                        android:textDirection="locale"
                        android:textAlignment="viewStart"
                        android:theme="@style/MyEditTextTheme"
                        android:gravity="start"
                        android:textSize="14sp"
                        android:layout_marginTop="@dimen/dim_40"
                        android:hint="@string/please_write"
                        android:layout_height="wrap_content"
                        android:background="@drawable/transparent_background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>


            </android.support.constraint.ConstraintLayout>


        </ScrollView>

        <TextView
                android:id="@+id/save"
                android:textColor="@color/screen_title_color"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_b"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/save"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:layout_alignParentBottom="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
    </RelativeLayout>
</layout>