<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
            android:id="@+id/parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/pdf_bg">

        <include
                android:id="@+id/toolbar"
                layout="@layout/my_toolbar"/>

        <TextView
                android:id="@+id/highlight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dim_20"
                android:layout_marginRight="@dimen/dim_20"
                android:layout_marginTop="@dimen/dim_10"
                android:textSize="@dimen/txt_24"
                android:textColor="@color/screen_title_color"
                android:fontFamily="@font/ubuntu_b"
                android:text="@string/highlight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"/>


        <TextView
                android:id="@+id/highlight_txt"
                android:textColor="@color/screen_title_color"
                android:fontFamily="@font/opensans_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dim_20"
                android:layout_marginTop="10dp"
                android:layout_margin="@dimen/dim_20"
                android:text="@string/highlight_txt"
                android:textSize="@dimen/txt_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/highlight"/>


        <EditText
                android:id="@+id/main_text"
                android:minHeight="@dimen/dim_100"
                android:layout_marginTop="@dimen/dim_60"
                android:padding="@dimen/dim_20"
                android:textColorHighlight="@color/white"
                android:textColor="@color/screen_title_color"
                android:layout_marginLeft="@dimen/dim_20"
                android:layout_marginRight="@dimen/dim_20"
                android:fontFamily="@font/ubuntu_m"
                android:background="@drawable/transparent_background"
                app:layout_constraintTop_toBottomOf="@+id/highlight_txt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textIsSelectable="true"
                android:editable="false"
                android:gravity="center|top"
                android:textSize="@dimen/txt_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        </EditText>

        <TextView
                android:id="@+id/save"
                android:textColor="@color/screen_title_color"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_b"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/save"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>


</layout>