<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@drawable/bg">

        <include
                android:id="@+id/toolbar"
                layout="@layout/my_toolbar"/>

        <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:src="@drawable/welcome_icon"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

        <TextView
                android:id="@+id/label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:alpha="0.8"
                android:fontFamily="@font/opensans_r"
                android:padding="10dp"
                android:text="@string/enter_email"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo"/>

        <EditText
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/transparent_background"
                android:fontFamily="@font/ubuntu_r"
                android:gravity="center|start"
                android:textAlignment="viewStart"
                android:hint="@string/email"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_color"
                android:textSize="14sp"
                android:theme="@style/MyEditTextTheme"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label"/>

        <TextView
                android:id="@+id/reset_pwd"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/ubuntu_b"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/reset_pwd"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</layout>
